--- a/app/views/songs/index.erb
+++ b/app/views/songs/index.erb
@@ -1,6 +1,6 @@
 <% @songs.each do |song| %>
 	<div class="songs">
-		<h3>Song title: <%= song.title %></h3>
+		<h3>Song title: <a href="/songs/<%= song.id %>"><%= song.title %></a></h3>
 		<p>Author: <%= song.author %></p>
 		<% if song.url %>
 			<p><a href="<%= song.url %>">Let's hear it!</a></p>
