--- a/app/views/songs/show.erb
+++ b/app/views/songs/show.erb
@@ -10,8 +10,19 @@
 	Title: <%= @song.title %>
 </p>
 
-<% if @song.url %>
+<% if @youtube_video_code %>
+	<div class="embed-responsive embed-responsive-16by9">
+		<iframe class="embed-responsive-item" width="420" height="315" src="https://www.youtube.com/embed/<%= @youtube_video_code %>" frameborder="0" allowfullscreen></iframe>
+	</div>
+<% elsif @song.url %>
 	<a href="<%= @song.url %>"><%= @song.url %></a>
+<% end %>
+
+<% if @other_songs_from_author.any? %>
+	<h4>Other songs from <%= @song.author %>:</h4>
+	<% @other_songs_from_author.each do |song| %>
+		<p><a href="/songs/<%= song.id %>"> <%= song.title %></a></p>
+	<% end %>
 <% end %>
 
 <hr/>
