--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -14,6 +14,10 @@
   <title></title>
 </head>
 <body>
-    <%= yield %>
+    <%= erb(:navbar) %>
+    <div class="container">
+      <%= yield %>
+      <%= erb(:footer) %>
+    </div>    
 </body>
 </html>
