--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -3,6 +3,7 @@
 <head>
   
   <link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
+  <link rel="stylesheet" href="/stylesheets/signin.css">
   <link rel="stylesheet" href="/stylesheets/jumbotron-narrow.css">
   <link rel="stylesheet" href="/stylesheets/navbar-fixed-top.css">
   <link rel="stylesheet" href="/stylesheets/application.css">
