--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -4,16 +4,9 @@
 	</div>
 <% end %>
 
-<form method="post" action="/login">
-	<div>
-		<label>Email:</label>
-		<input type="email" name="email" value="<%= @email if @email %>">
-	</div>
-	<div>
-		<label>Password:</label>
-		<input type="password" name="password">
-	</div>
-	<div>
-		<input type="submit" value="Log in!">
-	</div>
+<form class="form-signin" method="post" action="/login">
+		<h2 class="form-signin-heading">Please log in</h2>
+		<input type="email" id="inputEmail" class="form-control" name="email" placeholder="Email" value="<%= @email if @email %>">
+		<input type="password" id="inputPassword" class="form-control" placeholder="Password" name="password">
+		<button class="btn btn-lg btn-primary btn-block" type="submit">Log in!</button>
 </form>
