--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -9,16 +9,9 @@
 	</div>
 <% end %>
 
-<form method="post" action="/signup">
-	<div>
-		<label>Email:</label>
-		<input type="email" name="email" value="<%= @user.email %>">
-	</div>
-	<div>
-		<label>Password:</label>
-		<input type="password" name="password">
-	</div>
-	<div>
-		<input type="submit" value="Sign me up!">
-	</div>
+<form class="form-signin" method="post" action="/signup">
+		<h2 class="form-signin-heading">Sign up</h2>
+		<input type="email" id="inputEmail" class="form-control" name="email" placeholder="Email" value="<%= @user.email %>">
+		<input type="password" id="inputPassword" class="form-control" placeholder="Password" name="password">
+		<button class="btn btn-lg btn-primary btn-block" type="submit">Sign me up!</button>
 </form>
