--- a/app/views/songs/show.erb
+++ b/app/views/songs/show.erb
@@ -1,5 +1,3 @@
-<%= erb(:navbar) %>
-
 <h4>
 	<p><small>Author: </small><%= @song.author %></p>
 </h4>
@@ -31,3 +29,33 @@
 
 <hr/>
 <a href="/songs">Back to all songs</a>
+<hr/>
+
+<% if current_user %>
+	<% if @song.reviews.pluck(:user_id).exclude? current_user.id %>
+		<form method="post" action="/songs/review/<%= @song.id %>">
+			<fieldset class="form-group">
+				<label>Write a review for <%= @song.title %> by <%= @song.author %></label>
+				<textarea class="form-control" name="review" rows="3"></textarea>
+			</fieldset>
+			<button type="submit" class="btn btn-primary">Submit</button>
+		</form>
+	<% end %>
+<% else %>
+	<p>You must be signed in to post reviews</p>
+<% end %>
+
+<h4>Reviews for this song</h4>
+<% @song.reviews.order(created_at: :desc).each do |review| %>
+	<p>
+		<%= review.content %><small> -- by <%= review.user.email %></small>
+		<% if current_user && current_user.id == review.user.id %>
+			<!-- <button class="btn btn-primary btn-sm">Delete this review</button> -->
+			<form class="form-inline" method="post" action="/songs/review/<%= review.id %>">
+				<!-- <small>Are you sure?</small> -->
+				<input name="_method" type="hidden" value="delete">
+				<button class="btn btn-danger btn-sm" type="submit">Delete</button>
+			</form>
+		<% end %>
+	</p>
+<% end %>
