added stars for ratings

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -6,13 +6,17 @@
   <link rel="stylesheet" href="/stylesheets/signin.css">
   <link rel="stylesheet" href="/stylesheets/jumbotron-narrow.css">
   <link rel="stylesheet" href="/stylesheets/navbar-fixed-top.css">
+  <link rel="stylesheet" href="/stylesheets/jquery.raty.css">
+
   <link rel="stylesheet" href="/stylesheets/application.css">
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="/javascript/bootstrap.min.js"></script>
+  <script src="/javascript/jquery.raty.js"></script>
+
   <script src="/javascript/application.js"></script>
 
-  <title></title>
+  <title>Music Wall</title>
 </head>
 <body>
     <%= erb(:navbar) %>
